SporeCommunity.ModBrowser.Blazor/wwwroot/style/style.css
/* Global styles */

html {
    font-size: 16px;
    font-family: var(--spore-font);
    background-image: var(--spore-glyphic-bg-dark);
    background-color: var(--spore-deep-space);
}

body {
    max-width: 1024px;
    min-height: calc(100vh - 48px);
    margin: auto;
    background: var(--spore-mid-space);
}

#app {
    position: relative;
    min-height: calc(100vh - 171px);
    margin: 0 8px;
    background: var(--spore-white);
    border-radius: 24px;
    padding: 16px 24px;
    box-shadow: 0 0 24px 0 var(--spore-neutral) inset;
}

/* Header styles */

header {
    padding: 16px 32px 8px;
}

header h1, header a {
    color: var(--spore-white);
    margin: 0;
    text-decoration: none;
}

/* Nav styles */

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

nav li {
    display: inline;
}

nav a {
    text-decoration: none;
    padding: 4px;
    color: var(--spore-mid-space);
}

nav .active {
    text-decoration: underline;
    color: var(--spore-light-space);
}

nav a:hover {
    color: var(--spore-light-space);
}

#main-nav-buttons {
    /* Need to hide this if window width is under 768px, and switch to menu button */
    width: 300px;
    position: absolute;
    top: -48px;
    right: 0;
    background: var(--spore-mid-space);
    border-bottom: 4px var(--spore-mid-space) solid;
    border-left: 4px var(--spore-mid-space) solid;
    border-radius: 0 0 0 24px;
}

#main-nav-buttons a {
    padding: 0;
}

#main-nav-buttons button {
    width: 100%;
    height: 40px;
    margin-bottom: 4px;
}

#main-nav-buttons nav {
    display: flex;
}

#main-nav-buttons nav a {
    flex: 50%;
    padding: 0 2px;
}

/* Footer styles */

footer {
    color: var(--spore-cool);
    font-size: 14px;
    padding: 4px 32px;
}

footer p {
    margin: 0;
    padding: 4px 0;
}

footer a {
    color: var(--spore-cool);
}

/* Basic styles */

p {
    font-family: var(--spore-body-font);
}

a {
    color: var(--spore-light-space);
}

h1 {
    color: var(--spore-light-space);
    font-size: 32px;
}

h2 {
    color: var(--spore-light-space);
    font-size: 24px;
}

h3 {
    color: var(--spore-deep-grey);
    font-size: 20px;
    margin-top: 32px;
    margin-bottom: 16px;
    ;
}

h4 {
    font-size: 16px;
}

hr {
    border: 2px solid var(--spore-mid-space);
    margin: 32px 0;
}

img {
    max-width: 100%;
    max-height: 100%;
}

ul, ol, label {
    font-family: var(--spore-body-font);
}

table {
    border-collapse: collapse;
    font-family: var(--spore-body-font);
    font-size: 14px;
    margin: 12px 0;
}

td, th {
    border-top: 1px solid var(--spore-mid-space);
    border-bottom: 1px solid var(--spore-mid-space);
    padding: 4px;
}

input {
    background: var(--spore-cool);
    font-family: var(--spore-body-font);
    font-size: 16px;
    padding: 5px 13px;
    border: 3px var(--spore-neutral) solid;
    border-radius: 32px;
}

input:focus {
    border-color: var(--spore-light-space);
}

button {
    background: var(--spore-space-gradient);
    color: var(--spore-white);
    font-family: var(--spore-font);
    font-size: 18px;
    padding: 5px 13px;
    border: 3px var(--spore-neutral) solid;
    border-radius: 32px;
    transition: 0.1s;
}

button:hover {
    border-color: var(--spore-light-space);
}

button:active {
    background: var(--spore-deep-space-gradient);
}

button:disabled {
    color: var(--spore-neutral);
}

/* Main content styles */

article {}

article h1:first-of-type {
    margin-top: 0;
}

/* Reusable styles */

.accent-green {
    color: var(--spore-accent-green);
}

.accent-orange {
    color: var(--spore-accent-orange);
}

.accent-purple {
    color: var(--spore-accent-purple);
}

.accent-green-bg {
    background: var(--spore-accent-green-gradient);
}

.accent-orange-bg {
    background: var(--spore-accent-orange-gradient);
}

.accent-purple-bg {
    background: var(--spore-accent-purple-gradient);
}

.loading {
    color: var(--spore-neutral);
    font-size: 24px;
    display: flex;
    align-items: center;
}

.loading img {
    height: 1em;
    width: 1em;
    margin: 8px;
    animation: spin 2s linear infinite;
}

.page-cover {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 10;
    height: 100vh;
    width: 100vw;
    background: rgba(0, 0, 0, 0.75);
}

.dialog {
    position: fixed;
    left: 0;
    right: 0;
    top: 10%;
    width: 512px;
    margin: auto;
    padding: 16px;
    z-index: 10;
    background-color: var(--spore-white);
    border: 4px var(--spore-mid-space) solid;
    border-radius: 24px;
}

.dialog div {
    text-align: right;
}

.dialog button {
    margin: 0 4px;
}

@keyframes spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

/* Blazor styles */

#blazor-error-ui {
    display: none;
}

